--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,29 +2,25 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch Program",
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
       "program": "${workspaceFolder}/src/app.ts",
       "outFiles": [
         "${workspaceFolder}/out/**/*.js"
       ],
-      "skipFiles": [
-        "<node_internals>/**"
-      ]
+      "skipFiles": ["<node_internals>/**"]
     },
     {
+      "name": "Build Project",
       "type": "node",
       "request": "launch",
-      "name": "Build Project",
       "program": "${workspaceFolder}/src/app.ts",
       "preLaunchTask": "npm: build",
       "sourceMaps": true,
       "smartStep": true,
       "internalConsoleOptions": "openOnSessionStart",
-      "outFiles": [
-        "${workspaceFolder}/out/**/*.js"
-      ]
+      "outFiles": ["${workspaceFolder}/out/**/*.js"]
     }
   ]
 }
