--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
+    "target": "es5",
+    "moduleResolution": "node",
     "outDir": "./out",
     "rootDir": "./src",
-    "sourceMap": true,
-    "moduleResolution": "node",
-    "target": "es5"
+    "sourceMap": true
   }
 }
