--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "build": "tsc",
     "start": "node out/app.js",
-    "dev": "nodemon --inspect dist/main.js",
+    "dev": "nodemon --inspect out/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Flávio Micheletti",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "nodemon": "^2.0.7"
   }
 }
